# Jobbing

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  BOOKMARKS.example.md  Bookmarks  CLAUDE.md  CONTEXT.example.md  MARKET-ANALYSIS.md  Makefile  README.md  SCORING.md  WORKFLOW.md  generate_pdfs.py  jobhunt-bookmarks.txt  notion_queue_runner.sh  notion_update.py  pyproject.toml  scoring_criteria.md
.claude/plans/: jobbing-v2-plan.md  jobbing-v3-plan.md
.claude/skills/: analyze.md  apply.md  outreach.md  track.md
.claude/skills/analyze/: SKILL.md
.claude/skills/apply/: SKILL.md
.claude/skills/compare/: SKILL.md
.claude/skills/debrief/: SKILL.md
.claude/skills/disaggregate/: SKILL.md
.claude/skills/followup/: SKILL.md
.claude/skills/outreach/: SKILL.md
.claude/skills/prep/: SKILL.md
.claude/skills/reassess/: SKILL.md
.claude/skills/scan/: SKILL.md
.claude/skills/scoring/: SKILL.md
.claude/skills/track/: SKILL.md
.github/workflows/: ci.yml
.obsidian/: app.json  appearance.json  community-plugins.json
docs/: ARCHITECTURE.md  DECISIONS.md  DESIGN_HISTORY.md  LANGCHAIN_INTEGRATION.md  PRD-interview-intelligence-v2.md  PRD-page-template-v2.md  USER_STORIES.md
examples/: example_bookmarks.md  example_company.json  example_context.md
kanban/: Job Tracker.md  sync_notion_to_obsidian.py
kanban/companies/: 1KOMMA5.md  1Password.md  1inch.md  AI Agronomist.md  AVIV Group.md  Acto.md  Affirm.md  Alchemy.md  Alma.md  Alpaca.md  Amazon.md  Andercore.md  Apheris.md  Arc.md  Ashby.md  Atlas Metrics.md  AuthZed.md  Auto1 Group.md  Bandcamp (Songtradr).md  Berlin CyberSecurity Startup.md  BetterUp.md  Birkle IT.md  Bitpanda.md  Blue River Technology.md  Bobsled.md  Briink.md  Bunny.net.md  Caddie (Unknown DevTool Co).md  Celonis.md  Centrifuge.md  Cere.md  Chainlink Labs.md  Chainloop.md  ChargeScape.md  Choco.md  Chorus One.md  CircularTree.md  Clavium.md  Climate Farmers.md  Climate Partner.md  (+180 more)
kanban/interviews/1KOMMA5/: 2023-10-12-Martin-Lefringhausen.md  2023-10-16-Sascha-Schnorbach.md
kanban/interviews/AVIV Group/: 2023-05-16-Felix-Wehmeyer.md  2023-05-18-Ranga-Natarajan.md  2023-05-24-Mattias-Gianni-TPM.md  2023-05-26-Damian-Tramblay-Head-of-Platform-Architecture.md  unknown-date-Gilles-Lorrain-Group-CISO.md  unknown-date-Gur-Zeevi-Senior-Director-Platform-Experience.md
kanban/interviews/Acto/: 2026-02-11-Jason-West.md  2026-02-12-Maria-Meier-Endler.md  2026-02-16-Stefano-Zanella-Staff-Engineer-and-Marvin-Olschewski-Data-and-Analytics-Lead.md  2026-02-18-CPO-Round-Patrick-Kilian.md  2026-02-19-Offer-phone-call-from-Maria.md  2026-02-24-Patrick-guilt-trip-call.md
kanban/interviews/Alchemy/: 2026-02-10-Jhon-Mario.md  2026-02-11-Tiberiu-Mihai-Neacsu.md
kanban/interviews/Alpaca/: unknown-date-unknown-interviewer.md
kanban/interviews/Amazon/: unknown-date-unknown-interviewer.md
kanban/interviews/Arc/: 2026-02-03-Mos.md  2026-02-04-Joku.md  unknown-date-Serhii.md
kanban/interviews/Ashby/: unknown-date-unknown-interviewer.md
kanban/interviews/Atlas Metrics/: 2024-10-28-Chat-with-George-and-Albi.md
kanban/interviews/Bandcamp (Songtradr)/: 2026-03-09-Thomas-Roten.md
notebooks/: scratchpad.ipynb
scripts/: install.sh  migrate_to_unified_dirs.py
src/jobbing/: __init__.py  __main__.py  browser.py  cli.py  config.py  models.py  pdf.py  scanner.py
templates/: Company Hub Template.md
tests/: conftest.py  test_browser.py  test_cli.py  test_config.py  test_json_tracker.py  test_main.py  test_models.py  test_notion_helpers.py  test_notion_tracker.py  test_obsidian_tracker.py  test_pdf.py  test_scanner.py  test_sync_interviews.py  test_tracker_init.py
(+225 files in other folders)
