[project]
name = "jobbing"
version = "2.0.0"
description = "AI-assisted job application workflow: tailored CVs, cover letters, and Notion tracking"
requires-python = ">=3.10"
dependencies = [
    "reportlab>=4.0",
]

[project.scripts]
jobbing = "jobbing.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
