[project]
name = "jobbing"
version = "2.0.0"
description = "AI-assisted job application workflow: tailored CVs, cover letters, and Notion tracking"
requires-python = ">=3.10"
dependencies = [
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pre-commit>=3.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[project.scripts]
jobbing = "jobbing.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# -- Ruff (linter + formatter) ------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["companies", ".claude/worktrees"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["jobbing"]

[tool.ruff.format]
quote-style = "double"

# -- Mypy (type checking) -----------------------------------------------------

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

# -- Pytest --------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

# -- Coverage ------------------------------------------------------------------

[tool.coverage.run]
source = ["src/jobbing"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]
